css/plann3dStyles.css
/*
 * File: plann3dStyles.css
 * Authors: Patrick Ferguson and Tom Frauenfelder.
 * Created: 15/09/2015
 * Copyright: ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â©2015 Plann3d Pty Ltd
 * Purpose: Styling for all plann3d site elements.
 */

body, html {
    max-width: 100vw !important;
    overflow-x: hidden !important;
}

#nav-bar {
    position: fixed;
    width: 100vw;
    height: 75px;
    top: 0px;
    left: 0px;
    /*border-bottom: 1px solid #58585b;*/
    z-index: 99;
}

#nav-bar .navLogo {
    width: auto;
    height: 29px;
    left: 80px;
}

#nav-bar #right-bar {
    position: absolute;
    right: 0px;
    padding-right: 80px;
}

#nav-bar a {
    font-family: 'Roboto', sans-serif;
    font-weight: 300; /* Light */
    font-size: 11px;
    letter-spacing: 5px;
}

/* Burger menu styles */
#nav-bar #menu-link {
    position: absolute;
    display: none;
    top: 50%;
    right: 24px;
    background-color: transparent;
}
/* Burger menu line colours */
#nav-bar #menu-link:hover {
    /*background-color: #d1d2d4;*/
}
#nav-bar #menu-link .menu-icon {
    background-color: #fff;
}
#nav-bar #menu-link .menu-icon:hover {
    background-color: #d1d2d4;
}
#nav-bar #menu-link.is-clicked .menu-icon {
    background-color: rgba(255, 255, 255, 0);
}
#menu-link.is-clicked .menu-icon::before, #menu-link.is-clicked .menu-icon::after {
    background-color: #fff;
}

#pointsJS {
    position: absolute;
    display: inline-block;
    top: 0;
    left: 0;
    width: 100%;
    max-width: 100%;
}

#plann3d-hero-vid-holder {
    position: absolute;
    display: block;
    max-width: 100vw;
    max-width: 100vh;
    width: 100vw;
    height: 100vh;
    overflow: hidden;
}

#plann3d-hero-vid {
    position: fixed;
    display: block;
    width: auto;
    height: auto;
    min-width: 100vw;
    min-height: 100vh;
    overflow: hidden;
    z-index: 0;
}

#plann3d-hero-vid-fallback {
    position: fixed;
    display: none;
    width: auto;
    height: auto;
    min-width: 100vw;
    min-height: 100vh;
    overflow: hidden;
    z-index: 0;
}

#hero .container-fluid {
    z-index: 15;
    top: -15vh;
}

#hero-title {
    font-family: 'Roboto', sans-serif;
    font-weight: 300; /* Light */
    font-size: 3em;
    line-height: 56px;
    max-width: 850px;
    text-align: center;
    letter-spacing: 0.145833em;
    
    padding-bottom: 5vh;
    opacity: 0.0;
}

#hero-title-subtext {
    opacity: 0.0;
}

#hero-subscribe {
    opacity: 0.0;
}

#hero.full-height {
    min-height: 640px;
}

.full-height {
    height: 100vh;
}

#contact-form input {
    border-radius: 0;
}
#contact-form textarea {
    border-radius: 0;
}
#contact-form button {
    border-radius: 0;
}

@media (min-width: 1200px) {
    #mc_embed_signup {
        padding-top: 7.5vh;
    }
}

/* Modal dialogue */
@media (min-width: 768px) {
    .modal-dialog {
        width: 60vw;
        top: 7.5vh;
        height: 80vh;
        max-height: 90vh;
        z-index: 99999 !important;
    }
}
.plann3dPlayer {
    max-height: 80vh;
}
.fb-video {
    display: none !important;
}

.modal-content {
    background-color: transparent;
}
.modal-body {
    padding: 0;
}
.close-modal {
    width: 20px;
    height: 20px;
    top: -30px;
    right: -30px;
}
.close-modal .menu-icon {
    width: 10px;
}

#playerLogoBacking {
    position: absolute;
    bottom: 4px;
    width: 100%;
    padding: 23px;
    height: 70px;
}
.playerLogo {
    width: auto;
    height: 100%;
}                    

/* Mobile breakpoints */
@media (max-width: 767px) {
    .hidden-xs {
        display: none !important;
    }
    #hero-title {
        font-family: 'Roboto', sans-serif;
        font-weight: 300; /* Light */
        font-size: 16pt;
        line-height: 24pt;
        max-width: 100%;
        max-width: 850px;
        text-align: center;
        letter-spacing: 7px;
        padding-bottom: 0 !important;
    }
    #plann3dTable {
        height: 120px !important;
    }
    #plann3dTable .plann3dImac {
        width: 900px !important;
        top: -276px !important;
        height: auto !important;
        max-height: none;
    }
    #nav-bar #right-bar {
        display: none !important;
    }
    #nav-bar #menu-link {
        display: block !important;
    }
    #plann3d-hero-vid-fallback {
        display: block;
    }
    #plann3d-hero-vid {
        display: none;
    }
    .plann3dPlayBtn {
        top: 426px !important;
        opacity: 0.0 !important;
    }
    .plann3dPlayLargeBtn {
        top: 61px !important;
        width: 128px !important;
        height: 128px !important;
        opacity: 1.0 !important;
    }
    .plann3dPlayLargeBtnText {
        top: 298px !important;
        opacity: 1.0 !important;
    }
    #plann3d-player.plann3dPlayer {
        display: none;
    }
    .modal-body #playerLogoBacking {
        display: none;
    }
    .modal-body .fb-video {
        display: block !important;
    }
    .modal-body {
        padding: 25vh 0;
        height: 50vh;
    }
    #nav-bar .navLogo {
        left: 8px;
    }
}

@media (max-width: 1200px) {
    /* Hiding the auxillary elements when they'd intersect the screen bounds */
    .hideAuxElems {
        display: none !important;
    }
    #plann3dTable {
        height: 120px;
    }
    #plann3dTable .plann3dImac {
        width: 1500px;
        top: -420px;
        height: auto;
        max-height: none;
    }
    .plann3dPlayBtn {
        top: 150px;
    }
    .plann3dPlayLargeBtn {
        top: -283px;
    }
    .plann3dPlayLargeBtnText {
        top: -25px;
    }
}

.vidCover {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #000000;
    opacity: 0.5;
}

.plann3dtitle {
    font-family: 'Roboto Light', sans-serif;
    font-size: 18px;
    color: #FFFFFF;
    letter-spacing: 1.54px;
    line-height: 24px;
}

.headerlinks {
    font-family: 'Roboto Regular', sans-serif;
    font-size: 14px;
    color: #FFFFFF;
    letter-spacing: 2.2px;
    line-height: 16px;
}

h1 {
    font-family: 'Roboto', sans-serif;
    font-weight: 300; /* Light */
    font-size: 36px;
    color: #0E1125;
    letter-spacing: 2.2px;
    line-height: 42px;
}

h2 {
    font-family: 'Roboto', sans-serif;
    font-weight: 300; /* Light */
    font-size: 15px;
    color: #0E1125;
    letter-spacing: 1.2px;
    line-height: 24px;
}

h3 {
    font-family: 'Roboto', sans-serif;
    font-weight: 500; /* Medium */
    font-size: 14px;
    color: #0E1125;
    letter-spacing: 0.85px;
    line-height: 16px;
}

p {
    font-family: 'Roboto', sans-serif;
    font-weight: 300; /* Light */
    font-size: 17px;
    color: #000000;
    letter-spacing: 0.6px;
    line-height: 20px;
}

input:not(input[type=submit]), textarea {
    font-family: 'Roboto', sans-serif;
    font-weight: 500;
}

.buttontext {
    font-family: 'Roboto', sans-serif;
    font-weight: 600; /* Semi-Bold */
    font-size: 14px;
    color: #FFFFFF;
    letter-spacing: 1.4px;
    line-height: 16px;
}

.ghostedtext {
    font-family: 'Roboto', sans-serif;
    font-weight: 300; /* Light */
    font-size: 14px;
    color: #A4A4A4;
    letter-spacing: 0.77px;
    line-height: 16px;
}

.button {
    background: #184B72;
}

.formfield {
    background: #EDEDED;
    box-shadow: inset 0 1px 5px 1px rgba(0,0,0,0.30);
}

.featuremask {
    border: 6px solid #184B72;
}

.contactBtn {
    font-family: 'Roboto', sans-serif;
    font-weight: 300; /* Light */
    font-size: 15px;
    color: #0E1125;
    letter-spacing: 1.2px;
}

/* BEGIN PLANN3D TABLE */
#plann3dTable {
    background-color: #E8E8E9;
    height: 144px;
    width: 100%;
}

#plann3dTable img {
    z-index: 0;
}

#plann3dTable .plann3dImac {
    position: relative;
    display: block;
    top: -405px;
    width: 1446px;
    height: 493px;
    pointer-events: none;
}

#plann3d-player-link-holder {
    position: relative;
    top: -948px;
    z-index: 12;
    width: 256px;
    height: 356px;
    cursor: pointer;
}

.plann3dPlayerLink {
    padding: 0px;
    margin: 0px;
    /* display: block; */
    text-decoration: none;
    /*width: 250px;
    height: 250px;*/
    width: 100%;
    height: 100%;
}

.plann3dPlayBtn {
    position: relative;
    display: block;
    top: 175px;
    width: 64px;
    height: 64px;
    opacity: 1.0;
}
    
.plann3dPlayLargeBtn {
    position: relative;
    display: block;
    top: -262px;
    width: 256px;
    height: 256px;
    opacity: 0.0;
}

.plann3dPlayLargeBtnText {
    position: relative;
    display: block;
    top: 0px;
    width: 256px;
    height: 256px;
    opacity: 0.0;
}

#plann3dTable .auxTableElems {
    display: block;
    width: 1196px;
    top: -1124px;
    z-index: 10;
}

#plann3dTable .plann3dHeadset {
    position: relative;
    display: block;
    top: 120px;
    left: 0px;
    width: 252px;
    height: 187px;
    cursor: pointer;
    z-index: 5;
}

#plann3dTable .plann3dHeadsetText {
    position: relative;
    display: block;
    left: 73px;
    top: -375px;
    width: 125px;
    opacity: 0.0;
}

#plann3dTable .plann3dTablet {
    position: relative;
    display: block;
    top: -107px;
    left: 892px;
    width: 318px;
    height: 231px;
    cursor: pointer;
}

#plann3dTable .plann3dTabletText {
    position: relative;
    display: block;
    top: -450px;
    left: 983px;
    width: 145px;
    opacity: 0.0;
}
/* END PLANN3D TABLE */

/* BEGIN MAILCHIMP */
#mc_embed_signup .mc-field-group {
    max-height: 0px;
}

#mc_embed_signup {
    background: transparent;
    clear: left;
    font: 14px Helvetica,Arial,sans-serif;
    max-width: 610px;
}

#mc_embed_signup .mc-field-group input {
    font-family: 'Roboto', sans-serif;
    font-weight: 300; /* Light */
    font-size: 12px;
    width: calc(100% - 110px);
    height: 45px;
    top: 0px;
    -webkit-box-shadow: inset 0px 1px 5px 1px rgba(0,0,0,0.3);
    -moz-box-shadow: inset 0px 1px 5px 1px rgba(0,0,0,0.3);
    box-shadow: inset 0px 1px 5px 1px rgba(0,0,0,0.3);
}

#mc_embed_signup .button:hover {
    color: #d1d2d4;
    background-color: #0066ab;
}

#mc_embed_signup .button {
    font-family: 'Roboto', sans-serif;
    font-weight: 300; /* Light */
    font-size: 13px;
    background-color: #0066ab;
    position: absolute;
    right: 25px;
    top: 10px;
    margin: 0px;
    padding: 0px;
    width: 110px;
    height: 45px;
    border-radius: 0;
}

.header p {
    font-size: 15px;
}

/* Signup success or fail */
#mc_embed_signup div#mce-responses {
    display: none;
}
/* END MAILCHIMP */

